--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Byte-compiled / optimized / DLL files
 __pycache__/
+*.pyc
 *.py[cod]
 *$py.class
 
@@ -127,3 +128,15 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# wandb
+wandb/*
+
+assets/tensorflow*
+
+*.pth
+*.mp4
+*.json
+*.pt
+*.zip
+*.json
