--- a/requirements.txt
+++ b/requirements.txt
@@ -1,41 +1,48 @@
-#python=3.9.7
-absl-py==0.15.0
+#python=3.7.9
+absl-py==1.0.0
 albumentations==1.1.0
 astunparse==1.6.3
+cached-property==1.5.2
+cachetools==5.0.0
 certifi==2021.10.8
 charset-normalizer==2.0.12
-clang==5.0
 click==8.0.4
 colorama==0.4.4
 docker-pycreds==0.4.0
 easydict==1.9
-flatbuffers==1.12
-gast==0.4.0
+flatbuffers==2.0
+gast==0.5.3
 gitdb==4.0.9
 GitPython==3.1.27
+google-auth==2.6.0
 google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
-grpcio==1.41.0
-h5py==3.1.0
+grpcio==1.44.0
+h5py==3.6.0
 idna==3.3
 imageio==2.16.1
+importlib-metadata==4.11.2
 joblib==1.1.0
-keras==2.6.0
+keras==2.8.0
 Keras-Preprocessing==1.1.2
-loguru==0.6.0 # python easy logger
-Markdown==3.3.4
-networkx==2.7
-numpy==1.22.2
+libclang==13.0.0
+loguru==0.6.0
+Markdown==3.3.6
+networkx==2.6.3
+numpy==1.21.5
+oauthlib==3.2.0
 opencv-python==4.5.5.62
 opencv-python-headless==4.5.5.62
 opt-einsum==3.3.0
 packaging==21.3
-pandas==1.4.1
+pandas==1.3.5
 pathtools==0.1.2
 Pillow==9.0.1
 promise==2.3
 protobuf==3.19.4
 psutil==5.9.0
+pyasn1==0.4.8
+pyasn1-modules==0.2.8
 pyDeprecate==0.3.2
 pyparsing==3.0.7
 python-dateutil==2.8.2
@@ -44,30 +51,38 @@ PyWavelets==1.2.0
 PyYAML==6.0
 qudida==0.0.4
 requests==2.27.1
+requests-oauthlib==1.3.1
+rsa==4.8
 scikit-image==0.19.2
 scikit-learn==1.0.2
-scipy==1.8.0
-sentry-sdk==1.5.6
+scipy==1.7.3
+sentry-sdk==1.5.7
+setproctitle==1.2.2
 shortuuid==1.0.8
 six==1.16.0
 smmap==5.0.0
-tensorboard==2.7.0
-tensorflow==2.6.0
-tensorflow-estimator==2.6.0
-tensorflow-io==0.21.0
-tensorflow-io-gcs-filesystem==0.21.0
+tensorboard==2.8.0
+tensorboard-data-server==0.6.1
+tensorboard-plugin-wit==1.8.1
+tensorflow==2.8.0
+tensorflow-estimator==2.8.0
+tensorflow-io==0.24.0
+tensorflow-io-gcs-filesystem==0.24.0
 termcolor==1.1.0
-thop==0.0.31.post2005241907 # pytorch-Opcounter
+tf-estimator-nightly==2.8.0.dev2021122109
+thop==0.0.31.post2005241907
 threadpoolctl==3.1.0
-tifffile==2022.2.9
+tifffile==2021.11.2
 torch==1.10.2
 torchmetrics==0.7.2
 torchvision==0.11.3
-tqdm==4.62.3
+tqdm==4.63.0
 typing_extensions==4.1.1
 urllib3==1.26.8
-wandb==0.12.10
+wandb==0.12.11
+Werkzeug==2.0.3
 win32-setctime==1.1.0
 wincertstore==0.2
-wrapt==1.12.1
+wrapt==1.13.3
 yaspin==2.1.0
+zipp==3.7.0
