--- a/requirements.txt
+++ b/requirements.txt
@@ -33,6 +33,7 @@ numpy==1.21.5
 oauthlib==3.2.0
 opencv-python==4.5.5.62
 opencv-python-headless==4.5.5.62
+optuna==2.10.0
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.3.5
