yaml file 내 wandb entity 수정

--- a/config/config_lesion_retinanet.yml
+++ b/config/config_lesion_retinanet.yml
@@ -1,8 +1,8 @@
 comment: Commentaire sur l'entraînement
 
 wandb:
-  name_project: "lesion_detection"
-  entity: "lesion-detection"
+  name_project: "dacon-leison-bh"
+  entity: "dacon-leison-bh"
   name_run: 
 
 data:
