--- a/config/config_lesion_retinanet.yml
+++ b/config/config_lesion_retinanet.yml
@@ -2,7 +2,7 @@ comment: Commentaire sur l'entraînement
 
 wandb:
   name_project: "Dacon-Leison-Detection-BH"
-  entity: "Dacon-Leison-Detection-BH"
+  entity: "kaggle_dangsan"
   name_run: 
 
 data:
